@@ -1,6 +1,8 @@
 package ru.job4j.collection;
 
 import org.junit.Test;
+
+import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
@@ -24,25 +26,40 @@ public class DepartmentsTest {
 
     @Test
     public void whenAll() {
-        List<String> input = List.of("K1/SK1", "K1/SK2", "K1/SK1/SSK1", "K1/SK1/SSK2", "K2", "K2/SK1/SSK1", "K2/SK1/SSK2");
-            List<String> expect = List.of("K1", "K1/SK1", "K1/SK2", "K1/SK1/SSK1", "K1/SK1/SSK2", "K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2");
+        List<String> input = List.of("K1/SK1", "K1/SK2",
+                "K1/SK1/SSK1", "K1/SK1/SSK2",
+                "K2", "K2/SK1/SSK1", "K2/SK1/SSK2");
+            List<String> expect = List.of("K1", "K1/SK1",
+                    "K1/SK2", "K1/SK1/SSK1",
+                    "K1/SK1/SSK2", "K2", "K2/SK1",
+                    "K2/SK1/SSK1", "K2/SK1/SSK2");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void sortAsc() {
-        List<String> input = List.of("K1/SK1", "K1/SK1/SSK2", "K2/SK1", "K2/SK1/SSK1", "K1/SK2", "K2", "K1");
+        List<String> input = Arrays.asList("K1/SK1", "K1/SK1/SSK2",
+                "K2/SK1", "K2/SK1/SSK1",
+                "K1/SK2", "K2", "K1");
         Departments.sortAsc(input);
-        List<String> expect = List.of("K1", "K1/SK1", "K1/SK1/SSK2", "K1/SK2", "K2", "K2/SK1", "K2/SK1/SSK1");
+        List<String> expect = List.of("K1", "K1/SK1",
+                "K1/SK1/SSK2", "K1/SK2",
+                "K2", "K2/SK1", "K2/SK1/SSK1");
         assertThat(input, is(expect));
     }
 
     @Test
     public void sortDesc() {
-        List<String> input = List.of("K1/SK1", "K1/SK1/SSK2", "K2/SK1", "K2/SK1/SSK1", "K1/SK2", "K2", "K1", "K2/SK1/SSK2", "K1/SK1/SSK1");
+        List<String> input = Arrays.asList("K1/SK1", "K1/SK1/SSK2",
+                "K2/SK1", "K2/SK1/SSK1",
+                "K1/SK2", "K2", "K1",
+                "K2/SK1/SSK2", "K1/SK1/SSK1");
         Departments.sortDesc(input);
-        List<String> expect = List.of("K2", "K2/SK1", "K2/SK1/SSK1", "K2/SK1/SSK2", "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2");
+        List<String> expect = List.of("K2", "K2/SK1",
+                "K2/SK1/SSK1", "K2/SK1/SSK2",
+                "K1", "K1/SK1",
+                "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2");
         assertThat(input, is(expect));
     }
 }
